put advance button in first section only, added event listener to radio buttons and incorporated logic to subtract time for incorrect answers, changed scoring mechanism to work with new logic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,13 @@
 
 .box {
     text-align: center;
-    display: flex;
-    flex-direction: column;
 }
 
 h1 {
     font-size: 20px;
     text-align: right;
+}
+
+#endGame {
+    display: none;
 }
